[package]
name = "axum_nigthscout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.2", features = [
    "tls-rustls",
    "postgres",
    "chrono",
    "macros",
    "runtime-tokio",
] }
dotenvy = '0.15.7'
thiserror = "1.0.49"
config = "0.13.3"
sha1_smol = "1.0.0"

[dev-dependencies]
axum-macros = "0.3.8"
